# typed_index

./: .gitignore  Cargo.toml  README.md
src/: index_extension.rs  lib.rs  serde_support.rs  std_impl.rs
